plugins {
    id 'java'
    id 'application'
}

sourceSets {
    main.java.srcDirs = ['java/src']
    main.resources.srcDirs = ['java/resources']
}

dependencies {
    implementation 'org.jetbrains:annotations:23.1.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    mainClass = 'eu.lovdahl.advent.of.code.App'
    applicationDefaultJvmArgs = ['-Djansi.passthrough=true']
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test).configureEach {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += '--enable-preview'
}
